# gts-rust

./: Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
gts/: Cargo.toml
gts-cli/: Cargo.toml
gts-cli/src/: cli.rs  gen_common.rs  gen_schemas.rs  lib.rs  logging.rs  main.rs  server.rs
gts-cli/src/gen_instances/: attrs.rs  mod.rs  parser.rs  schema_check.rs  string_lit.rs  writer.rs
gts-cli/src/schemas/: gts.x.test.base.v1~.schema.json  gts.x.test.base.v1~x.test.child.v1~.schema.json  gts.x.test.person.v1~.schema.json
gts-cli/tests/: cli_run_tests.rs  gen_instances_tests.rs
gts-id/: Cargo.toml
gts-id/src/: lib.rs
gts-macros/: Cargo.toml  README.md
gts-macros-cli/: Cargo.toml
gts-macros-cli/src/: main.rs
gts-macros/src/: lib.rs
gts-macros/tests/: compile_fail_tests.rs  inheritance_tests.rs  inheritance_tests_mixed.rs  integration_tests.rs  pretty_test.rs  serde_rename_tests.rs
gts-macros/tests/compile_fail/: base_parent_mismatch.rs  base_parent_mismatch.stderr  base_parent_single_segment.stderr  base_struct_both_id_and_type.rs  base_struct_both_id_and_type.stderr  base_struct_missing_id.rs  base_struct_missing_id.stderr  base_struct_wrong_gts_type.rs  base_struct_wrong_gts_type.stderr  base_struct_wrong_id_type.rs  base_struct_wrong_id_type.stderr  base_true_multi_segment.stderr  enum_not_supported.rs  enum_not_supported.stderr  instance_const_wrong_type.rs  instance_const_wrong_type.stderr  instance_missing_dir_path.rs  instance_missing_dir_path.stderr  instance_missing_instance_segment.rs  instance_missing_instance_segment.stderr  instance_missing_schema_id.rs  instance_missing_schema_id.stderr  instance_on_non_const.rs  instance_on_non_const.stderr  instance_schema_id_no_tilde.rs  instance_schema_id_no_tilde.stderr  instance_segment_bare_wildcard.rs  instance_segment_bare_wildcard.stderr  instance_segment_ends_with_tilde.rs  instance_segment_ends_with_tilde.stderr  invalid_file_extension.rs  invalid_file_extension.stderr  invalid_gts_id_missing_prefix.rs  invalid_gts_id_missing_prefix.stderr  invalid_gts_id_too_many_tokens.rs  invalid_gts_id_too_many_tokens.stderr  missing_description.rs  missing_description.stderr  missing_file_path.rs  missing_file_path.stderr  (+17 more)
gts-validator/: Cargo.toml  README.md
gts-validator/src/: config.rs  error.rs  lib.rs  main.rs  normalize.rs  output.rs  report.rs  validator.rs
gts-validator/src/format/: json.rs  markdown.rs  mod.rs  yaml.rs
gts-validator/src/strategy/: fs.rs  mod.rs
gts-validator/tests/: cli_tests.rs  validate_fs_tests.rs
gts/src/: entities.rs  entities_tests.rs  files_reader.rs  gts.rs  lib.rs  ops.rs  path_resolver.rs  schema.rs  schema_cast.rs  schema_cast_tests.rs  schema_compat.rs  schema_traits.rs  store.rs  store_test.rs  x_gts_ref.rs
