[package]
name = "gts-id"
version = "0.7.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GTS ID validation and parsing primitives"
keywords = ["gts"]
categories.workspace = true
readme.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
